UI: fixes dropdown menu overlapping
* ( closes #473)

--- a/invenio_opendata/base/static/css/collection.css
+++ b/invenio_opendata/base/static/css/collection.css
@@ -644,7 +644,7 @@
   text-align: center;
   padding-top: 3px;
   padding-bottom: 10px;
-  z-index: 1000;
+  z-index: 2;
   overflow: hidden;
   border-radius: 50%;
   display: inline-block;
